--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "npm run lint && vite build",
+    "preview": "vite preview",
+    "lint": "eslint . "
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
+    "eslint": "^9.0.0",
+    "globals": "^15.0.0",
     "vite": "^5.0.8"
   }
 }
